--- a/project_3/src/scss/blocks/_buttons.scss
+++ b/project_3/src/scss/blocks/_buttons.scss
@@ -23,4 +23,11 @@
         font-size: 16px;
         margin: 0;
     }
+    &_mini{
+        margin: 0;
+        width: 135px;
+        height: 44px;
+        font-weight: 500;
+        font-size: 14px;
+    }
 }
