--- a/project_3/src/scss/style.scss
+++ b/project_3/src/scss/style.scss
@@ -16,6 +16,9 @@
 @import 'blocks/advantages';
 @import 'blocks/consultation';
 @import 'blocks/forms';
+@import 'blocks/carousel';
+@import 'blocks/catalog';
+@import 'blocks/reviews';
 
 
 
